--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node --no-warnings services/ServerBootcheck.js && nodemon --quiet server.js"
+        "start": "node --no-warnings services/ServerBootcheck.js && node --quiet server.js"
     },
     "keywords": [],
     "author": "",
